--- a/MyFinances/src/main/resources/application.properties
+++ b/MyFinances/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.application.name=MyFinances
 server.port = 8080
-spring.jpa.hibernate.ddl.auto = update
-spring.jpa.generate-ddl =  auto
-spring.jpa.show-spl=true
-spring.datasource.url = jdbc:postgresql://localhost/5432/MyFinances
+spring.jpa.hibernate.ddl-auto =update
+spring.jpa.generate-ddl = true
+spring.jpa.show-sql=true
+spring.datasource.url = jdbc:postgresql://localhost:5432/MyFinances
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username= postgres
 spring.datasource.password = 13
 spring.main.allow-circular-references = true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql= true
 
